tests/negative/bad-refinement.sp

(* msut be a condition of some sort *)
badReturnType:Int where badReturnType+1 ();